# DotVault

./: .gitignore  README.md  dotvault_0.1.11_amd64.deb  pyproject.toml
cli/: main.py
core/: manager.py
dotvault/cli/: main.py
dotvault/config/: profiles.json
dotvault/core/: manager.py  profiles.py
repository/work/: .gitconfig
