[tool.poetry]
name = "dotvault"
version = "0.1.0"
description = ""
authors = ["Kelvin Núñez Barrantes <57465827+Vynidaulkel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
