[tool.poetry]
name = "dotvault"
version = "0.1.0"
description = "Gestor modular de dotfiles con perfiles y symlinks"
authors = ["Kelvin Núñez Barrantes <57465827+Vynidaulkel@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "dotvault" }]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
dotvault = "dotvault.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
